# hw_27.2

./: .env.sample  .gitignore  Dockerfile  README.md  django  docker-compose.yml  pyproject.toml  test.report
config/: settings.py  urls.py
fixtures/: groups.json  materials.json  users.json
materials/: models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: create_payments.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_options_payment.py  0002_course_owner_lesson_owner.py  0003_course_update_at.py  0004_alter_course_update_at.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_payments.py  create_su.py  create_tu.py
users/migrations/: 0001_initial.py  0002_alter_payment_options_and_more.py  0002_rename_payment_day_payment_payment_date.py  0003_alter_payment_options.py  0003_payment_payment_amount.py  0004_subscription.py
